# DarcyAIClaudeAgent

./: ReadMe.md  pyproject.toml
claude_agent/: my_claude_agent.py  react_agent.py  system_prompt.py
claude_agent/test/: style.css
compute_agent/: compute_agent.py
config/: mcp_config.json
config/skills/format-text-skill/: SKILL.md
config/skills/go-out-tips/: SKILL.md
config/skills/go-out-tips-skill/: SKILL.md
config/skills/reverse-text-skill/: SKILL.md
llm_api_call/: llm_api_call.py  llm_api_call_free_stream.py  llm_api_call_qwen.py  llm_api_call_zhipu.py  llm_api_call_zhipu_image.py  llm_api_call_zhipu_image_local.py  llm_api_call_zhipu_stream.py
src/claude1/: my_claude_agent.py  react_agent.py  tools.py
src/claude1/test/: game.js  index.html  open_game.bat
src/claude2/: langchain_agent.py  langchain_api_call.py
src/claude2/middleware/: model_aop.py  skill_middleware.py
src/claude2/skills/: skill_parser.py  skill_register.py
src/claude2/tools/: test_tool.py
src/claude_agent/: dir_output.txt  my_claude_agent.py  react_agent.py
src/compute_agent/: compute_agent.py
src/langchain/: langchain_agent.py  langchain_api_call.py
src/langchain/mcps/: mcp_adapter.py
src/langchain/middleware/: agent_aop.py  (+2 more)
src/llm_api_call/: llm_api_call.py  llm_api_call_llama.py  llm_api_call_qwen.py  llm_api_call_qwen_dashscope.py  llm_api_call_qwen_openai.py  llm_api_call_zhipu.py  llm_api_call_zhipu_image.py  llm_api_call_zhipu_image_base64.py
src/utils/: http_client_util.py
tests/: TestSkillParser.py  TestSkillScript.py
utils/: api_key_util.py
(+6 files in other folders)
